NATTQA-ENV/force-app/main/default/objects/Case/fields/Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details__c</fullName>
    <description>Additional Details</description>
    <inlineHelpText>Additional Details</inlineHelpText>
    <label>Additional Details</label>
    <type>TextArea</type>
</CustomField>