NATTQA-ENV/force-app/main/default/objects/Case/fields/Assigned_to_department__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_department__c</fullName>
    <label>Assigned to department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>24/7 (EcoEnergy)</fullName>
            </value>
            <value>
                <fullName>Aftermarket Sales Team</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>CAP APO</fullName>
            </value>
            <value>
                <fullName>CAP America</fullName>
            </value>
            <value>
                <fullName>CAP EMEA</fullName>
            </value>
            <value>
                <fullName>DHI</fullName>
            </value>
            <value>
                <fullName>Director/Upper Management</fullName>
            </value>
            <value>
                <fullName>FSM</fullName>
            </value>
            <value>
                <fullName>Marking dept</fullName>
            </value>
            <value>
                <fullName>Product Enginering</fullName>
            </value>
            <value>
                <fullName>Product support</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Software Support</fullName>
            </value>
            <value>
                <fullName>Training Dep.</fullName>
            </value>
            <value>
                <fullName>Warranty Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>