NATTQA-ENV/force-app/main/default/objects/Case/fields/Assigned_to_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Name__c</fullName>
    <description>Assigned to  (Name) - Use comment to send the notification</description>
    <label>Assigned to (Name)</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>