NATTQA-ENV/force-app/main/default/objects/Case/fields/Associated_Core_Return_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Associated_Core_Return_Account_Name__c</fullName>
    <formula>NATT_Core_Return_Location_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAC_Associated Core Return Account Name</label>
    <type>Text</type>
</CustomField>