NATTQA-ENV/force-app/main/default/objects/Case/fields/CLF_AT__c.field-meta.xml
<CustomField>
    <fullName>CLF_AT__c</fullName>
    <label>Action taken</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CLF_AT_1</fullName>
                <label>Apologized</label>
            </value>
            <value>
                <fullName>CLF_AT_2</fullName>
                <label>Customer visit</label>
            </value>
            <value>
                <fullName>CLF_AT_3</fullName>
                <label>Escalated</label>
            </value>
            <value>
                <fullName>CLF_AT_4</fullName>
                <label>Field Improvement Program</label>
            </value>
            <value>
                <fullName>CLF_AT_5</fullName>
                <label>No action taken</label>
            </value>
            <value>
                <fullName>CLF_AT_6</fullName>
                <label>Offered credit and/or return</label>
            </value>
            <value>
                <fullName>CLF_AT_7</fullName>
                <label>Offered other solution</label>
            </value>
            <value>
                <fullName>CLF_AT_8</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>CLF_AT_9</fullName>
                <label>Resolved before alert</label>
            </value>
            <value>
                <fullName>CLF_AT_10</fullName>
                <label>Unable to reach customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>