NATTQA-ENV/force-app/main/default/objects/Case/fields/CLF_PCI__c.field-meta.xml
<CustomField>
    <fullName>CLF_PCI__c</fullName>
    <label>Primary customer Issues</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLF_PCI_1</fullName>
                <label>Professionalism / Friendliness</label>
            </value>
            <value>
                <fullName>CLF_PCI_2</fullName>
                <label>Timeliness / Responsiveness</label>
            </value>
            <value>
                <fullName>CLF_PCI_3</fullName>
                <label>Training / Expertise</label>
            </value>
            <value>
                <fullName>CLF_PCI_4</fullName>
                <label>Communication</label>
            </value>
            <value>
                <fullName>CLF_PCI_5</fullName>
                <label>Products/Parts Availability</label>
            </value>
            <value>
                <fullName>CLF_PCI_6</fullName>
                <label>On-Time Delivery</label>
            </value>
            <value>
                <fullName>CLF_PCI_7</fullName>
                <label>Order Fulfillment</label>
            </value>
            <value>
                <fullName>CLF_PCI_8</fullName>
                <label>Scheduling Availability</label>
            </value>
            <value>
                <fullName>CLF_PCI_9</fullName>
                <label>Installation Quality</label>
            </value>
            <value>
                <fullName>CLF_PCI_10</fullName>
                <label>Product Quality</label>
            </value>
            <value>
                <fullName>CLF_PCI_11</fullName>
                <label>Service Quality</label>
            </value>
            <value>
                <fullName>CLF_PCI_12</fullName>
                <label>Documentation</label>
            </value>
            <value>
                <fullName>CLF_PCI_13</fullName>
                <label>Invoicing</label>
            </value>
            <value>
                <fullName>CLF_PCI_14</fullName>
                <label>Price</label>
            </value>
            <value>
                <fullName>CLF_PCI_15</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>