NATTQA-ENV/force-app/main/default/objects/Case/fields/Clolsure_time__c.field-meta.xml
<CustomField>
    <fullName>Clolsure_time__c</fullName>
    <label>Clolsure time</label>
    <type>DateTime</type>
</CustomField>