NATTQA-ENV/force-app/main/default/objects/Case/fields/Contact_of_who_contacted_the_TS_Agent__c.field-meta.xml
<CustomField>
    <fullName>Contact_of_who_contacted_the_TS_Agent__c</fullName>
    <label>Contact of who contacted the TS Agent</label>
    <type>TextArea</type>
</CustomField>