NATTQA-ENV/force-app/main/default/objects/Case/fields/CONTAINER_Address__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Address__c</fullName>
    <description>CONTAINER_Address</description>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>