NATTQA-ENV/force-app/main/default/objects/Case/fields/CONTAINER_Case_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Case_Closed_Date__c</fullName>
    <description>CONTAINER Case Closed Date</description>
    <label>Case Closed Date</label>
    <type>Date</type>
</CustomField>