NATTQA-ENV/force-app/main/default/objects/Case/fields/CONTAINER_City__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>