NATTQA-ENV/force-app/main/default/objects/Case/fields/CONTAINER_Comments__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Comments__c</fullName>
    <description>This field is created for Container Case Training.</description>
    <label>Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>