NATTQA-ENV/force-app/main/default/objects/Case/fields/Container_Component__c.field-meta.xml
<CustomField>
    <fullName>Container_Component__c</fullName>
    <label>Component</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Battery Charger</fullName>
            </value>
            <value>
                <fullName>Compressor</fullName>
            </value>
            <value>
                <fullName>Condenser Coil</fullName>
            </value>
            <value>
                <fullName>Condenser Motor</fullName>
            </value>
            <value>
                <fullName>Controller</fullName>
            </value>
            <value>
                <fullName>DOC</fullName>
            </value>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>Evap Coil</fullName>
            </value>
            <value>
                <fullName>Evap Motor</fullName>
            </value>
            <value>
                <fullName>ECV</fullName>
            </value>
            <value>
                <fullName>EEV</fullName>
            </value>
            <value>
                <fullName>Generator</fullName>
            </value>
            <value>
                <fullName>Heat Exchanger</fullName>
            </value>
            <value>
                <fullName>Sensor (add in Description)</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Telematic</fullName>
            </value>
            <value>
                <fullName>Voltage Controller</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>