NATTQA-ENV/force-app/main/default/objects/Case/fields/CONTAINER_Country__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>