NATTQA-ENV/force-app/main/default/objects/Case/fields/Container_Date_of_the_enquiry__c.field-meta.xml
<CustomField>
    <fullName>Container_Date_of_the_enquiry__c</fullName>
    <label>Date of the enquiry</label>
    <type>Date</type>
</CustomField>