NATTQA-ENV/force-app/main/default/objects/Case/fields/CONTAINER_Event_Map_Link__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Event_Map_Link__c</fullName>
    <label>Event Map Link(From Google Maps)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>