NATTQA-ENV/force-app/main/default/objects/Case/fields/CONTAINER_Language_of_Class__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Language_of_Class__c</fullName>
    <label>Language of Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>