NATTQA-ENV/force-app/main/default/objects/Case/fields/CONTAINER_Lead_Instructor__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Lead_Instructor__c</fullName>
    <label>Lead Instructor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>