NATTQA-ENV/force-app/main/default/objects/Case/fields/CONTAINER_Location__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ship</fullName>
            </value>
            <value>
                <fullName>Shore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>