NATTQA-ENV/force-app/main/default/objects/Case/fields/CONTAINER_Maximum_Participants__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Maximum_Participants__c</fullName>
    <label>Maximum Participants</label>
    <length>5</length>
    <type>Text</type>
</CustomField>