NATTQA-ENV/force-app/main/default/objects/Case/fields/CONTAINER_Region__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Region__c</fullName>
    <description>CONTAINER Service Engineering/Field Service Region</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>NAO</fullName>
            </value>
            <value>
                <fullName>APO</fullName>
            </value>
            <value>
                <fullName>AMERICAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>