NATTQA-ENV/force-app/main/default/objects/Case/fields/CONTAINER_Secondary_Instructor__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Secondary_Instructor__c</fullName>
    <label>Secondary Instructor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>