NATTQA-ENV/force-app/main/default/objects/Case/fields/CONTAINER_State_Region__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_State_Region__c</fullName>
    <label>State/Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>