NATTQA-ENV/force-app/main/default/objects/Case/fields/CONTAINER_Training_Event__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Training_Event__c</fullName>
    <label>Training Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Week Technician</fullName>
            </value>
            <value>
                <fullName>3 Day Technician</fullName>
            </value>
            <value>
                <fullName>2 Day Genset</fullName>
            </value>
            <value>
                <fullName>1 Day Product Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>