NATTQA-ENV/force-app/main/default/objects/Case/fields/CONTAINER_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>