NATTQA-ENV/force-app/main/default/objects/Case/fields/CTBR_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Case_Reason__c</fullName>
    <description>Reason that the Case is being created (for CTBR)</description>
    <inlineHelpText>Reason that the Case is being created</inlineHelpText>
    <label>CTBR Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abertura de Status DANFES (Devoluções)</fullName>
            </value>
            <value>
                <fullName>Access Profile change</fullName>
            </value>
            <value>
                <fullName>Additional Expense</fullName>
            </value>
            <value>
                <fullName>Aliquot Differential</fullName>
            </value>
            <value>
                <fullName>Alteração de cadastro</fullName>
            </value>
            <value>
                <fullName>Alteração de senha (Portal)</fullName>
            </value>
            <value>
                <fullName>Análise e cadastro de cliente</fullName>
            </value>
            <value>
                <fullName>Análise Rejeições DANFES</fullName>
            </value>
            <value>
                <fullName>Arrival forecast</fullName>
            </value>
            <value>
                <fullName>Atraso entrega produto ou peça (fora prazo contratado)</fullName>
            </value>
            <value>
                <fullName>Atraso no prazo de entrega informado pela transportadora/ Relatóruio SIM Frete</fullName>
            </value>
            <value>
                <fullName>Aumento de limite</fullName>
            </value>
            <value>
                <fullName>Availability</fullName>
            </value>
            <value>
                <fullName>Back Order</fullName>
            </value>
            <value>
                <fullName>Bill Copies</fullName>
            </value>
            <value>
                <fullName>Billing Address Update</fullName>
            </value>
            <value>
                <fullName>Cadastrar cliente a vista</fullName>
            </value>
            <value>
                <fullName>Cadastro - Análise de Crédito e Cadastro (a prazo)</fullName>
            </value>
            <value>
                <fullName>Cadastro - Somente Cadastro Clientes (à vista)</fullName>
            </value>
            <value>
                <fullName>Cancelamento de NF</fullName>
            </value>
            <value>
                <fullName>Cancelar Pedido aprovada/peças</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Certidões Negativas</fullName>
            </value>
            <value>
                <fullName>Certificado Digital</fullName>
            </value>
            <value>
                <fullName>CFOP</fullName>
            </value>
            <value>
                <fullName>Class A parts return</fullName>
            </value>
            <value>
                <fullName>Comissões - alterações, inclusões, etc.</fullName>
                <isActive>false</isActive>
                <label>Comissões - alterações, inclusões, etc.</label>
            </value>
            <value>
                <fullName>Comissões - Envio de NF para pagamento</fullName>
            </value>
            <value>
                <fullName>Comissões - Relatório - alterações, inclusões, etc.</fullName>
            </value>
            <value>
                <fullName>Commercial Warranty Extension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>