NATTQA-ENV/force-app/main/default/objects/Case/fields/CTM_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>CTM_Case_Reason__c</fullName>
    <description>Reason that the Case is being created (for CTM)</description>
    <inlineHelpText>Reason that the Case is being created</inlineHelpText>
    <label>CTM Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Management Issues</fullName>
            </value>
            <value>
                <fullName>Alarm</fullName>
            </value>
            <value>
                <fullName>Annual Returns</fullName>
            </value>
            <value>
                <fullName>Application Issue</fullName>
            </value>
            <value>
                <fullName>Availability</fullName>
            </value>
            <value>
                <fullName>Back Order</fullName>
            </value>
            <value>
                <fullName>Cancellations</fullName>
            </value>
            <value>
                <fullName>Claim Rejection or Appeals</fullName>
            </value>
            <value>
                <fullName>Claim Update</fullName>
            </value>
            <value>
                <fullName>Commissioning Issues</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Concealed Damage</fullName>
            </value>
            <value>
                <fullName>Concession Request</fullName>
            </value>
            <value>
                <fullName>Contract Issues</fullName>
            </value>
            <value>
                <fullName>Core Return</fullName>
            </value>
            <value>
                <fullName>Coverage Information</fullName>
            </value>
            <value>
                <fullName>Credit Memos</fullName>
            </value>
            <value>
                <fullName>Credits</fullName>
            </value>
            <value>
                <fullName>Customer Ordered in Error</fullName>
            </value>
            <value>
                <fullName>Damages</fullName>
            </value>
            <value>
                <fullName>Defective Shelf</fullName>
            </value>
            <value>
                <fullName>Direct Ship Overage</fullName>
            </value>
            <value>
                <fullName>Direct Ship Shortage</fullName>
            </value>
            <value>
                <fullName>Electrical Standby</fullName>
            </value>
            <value>
                <fullName>Engine Authorization Request</fullName>
            </value>
            <value>
                <fullName>Expedite - unit down/emergency orders</fullName>
            </value>
            <value>
                <fullName>Freight Charge/Surcharge</fullName>
            </value>
            <value>
                <fullName>Freight Company Complaints</fullName>
            </value>
            <value>
                <fullName>Freight Company Damage</fullName>
            </value>
            <value>
                <fullName>Freight Company O&amp;S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>