NATTQA-ENV/force-app/main/default/objects/Case/fields/CTM_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>CTM_Purchase_Order__c</fullName>
    <description>This filed can used for CTM Customer Service layout As per CAP-10888 request</description>
    <label>Purchase Order</label>
    <length>50</length>
    <type>Text</type>
</CustomField>