NATTQA-ENV/force-app/main/default/objects/Case/fields/Customer_Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Survey_Type__c</fullName>
    <label>Customer Survey Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Principal/GM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>