NATTQA-ENV/force-app/main/default/objects/Case/fields/Description_of_the_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Description_of_the_Resolution__c</fullName>
    <label>Description of the Resolution</label>
    <type>TextArea</type>
</CustomField>