NATTQA-ENV/force-app/main/default/objects/Case/fields/Description_Part__c.field-meta.xml
<CustomField>
    <fullName>Description_Part__c</fullName>
    <description>Description Part</description>
    <inlineHelpText>Description Part</inlineHelpText>
    <label>Description Part</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>