NATTQA-ENV/force-app/main/default/objects/Case/fields/Detailed_Description_of_the_Issue__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Description_of_the_Issue__c</fullName>
    <label>Detailed Description of the Issue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>