NATTQA-ENV/force-app/main/default/objects/Case/fields/Effectiveness_of_the_resolution__c.field-meta.xml
<CustomField>
    <fullName>Effectiveness_of_the_resolution__c</fullName>
    <label>Effectiveness of the resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Turn back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>