NATTQA-ENV/force-app/main/default/objects/Case/fields/End_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Name__c</fullName>
    <label>End Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>