NATTQA-ENV/force-app/main/default/objects/Case/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EliteLINE</fullName>
            </value>
            <value>
                <fullName>Everfresh</fullName>
            </value>
            <value>
                <fullName>NaturaLINE</fullName>
            </value>
            <value>
                <fullName>OptimaLINE</fullName>
            </value>
            <value>
                <fullName>PowerLINE</fullName>
            </value>
            <value>
                <fullName>PrimeLINE</fullName>
            </value>
            <value>
                <fullName>PrimeLINE Edge</fullName>
            </value>
            <value>
                <fullName>PrimeLINE &amp; OptmaLINE</fullName>
            </value>
            <value>
                <fullName>ThinLINE</fullName>
            </value>
            <value>
                <fullName>Other (Specify in Description)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>