NATTQA-ENV/force-app/main/default/objects/Case/fields/Item_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Item_Quantity__c</fullName>
    <label>Item Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>