NATTQA-ENV/force-app/main/default/objects/Case/fields/Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Line_Item__c</fullName>
    <description>This field has been used by NATT</description>
    <label>Part Numbers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>