NATTQA-ENV/force-app/main/default/objects/Case/fields/NAC_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>NAC_Account_Number__c</fullName>
    <formula>Account.CONTAINER_JDE_Bill_To_Code__c</formula>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>