NATTQA-ENV/force-app/main/default/objects/Case/fields/NAC_Close_Reason_Explanation__c.field-meta.xml
<CustomField>
    <fullName>NAC_Close_Reason_Explanation__c</fullName>
    <description>NA Containers field for Close Reason Explanation</description>
    <label>Close Reason Explanation</label>
    <type>TextArea</type>
</CustomField>