NATTQA-ENV/force-app/main/default/objects/Case/fields/NAOCAP_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_Address_Line_2__c</fullName>
    <formula>NATT_Core_Return_Location_Account__r.NAOCAP_Address_Line_2__c</formula>
    <label>NAOCAP Address Line 2</label>
    <type>Text</type>
</CustomField>