NATTQA-ENV/force-app/main/default/objects/Case/fields/NAOCAP_Contact_Point_Address__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_Contact_Point_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Point Address</label>
    <referenceTo>ContactPointAddress</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>