NATTQA-ENV/force-app/main/default/objects/Case/fields/NAOCAP_Core_Return_Additional_Message__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_Core_Return_Additional_Message__c</fullName>
    <formula>NATT_Core_Return_Location_Account__r.NAOCAP_Additional_Comments__c</formula>
    <label>NAOCAP Core Return Additional Message</label>
    <type>Text</type>
</CustomField>