NATTQA-ENV/force-app/main/default/objects/Case/fields/NAOCAP_Country__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>