NATTQA-ENV/force-app/main/default/objects/Case/fields/NAOCAP_State__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>