NATTQA-ENV/force-app/main/default/objects/Case/fields/NAOCAP_Street__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_Street__c</fullName>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>