NATTQA-ENV/force-app/main/default/objects/Case/fields/NAOCAP_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>