NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_all_data_downloaded__c.field-meta.xml
<CustomField>
    <fullName>NATT_all_data_downloaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please use DCX, ZAX, ZDX and ADX file types only</inlineHelpText>
    <label>TRU &quot;all data&quot; downloaded</label>
    <type>Checkbox</type>
</CustomField>